# yavs

./: .gitignore  Cargo.toml  README.md
examples/: index.html
python/: example.py  yavs.py
src/: lib.rs  wasm.rs
