[package]
name = "yavs"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = "0.2.99"
thiserror = "2.0.9"
js-sys = "0.3.76"
getrandom = { version = "0.2.15", features = ["js"] }

[features]
default = []

